[gd_scene load_steps=26 format=2]

[ext_resource path="res://actors/shared/Health.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/shared/FlashManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/enemies/sentry_drone/textures/sentry-drone.png" type="Texture" id=3]
[ext_resource path="res://actors/enemies/sentry_drone/sentry_drone.gd" type="Script" id=4]
[ext_resource path="res://actors/enemies/sentry_drone/states/idle.gd" type="Script" id=5]
[ext_resource path="res://actors/enemies/sentry_drone/states/bash_telegraph_shake.gd" type="Script" id=6]
[ext_resource path="res://actors/enemies/sentry_drone/states/bash_telegraph_pause.gd" type="Script" id=7]
[ext_resource path="res://actors/enemies/sentry_drone/states/bash.gd" type="Script" id=8]
[ext_resource path="res://actors/enemies/sentry_drone/states/bash_recover.gd" type="Script" id=9]
[ext_resource path="res://actors/enemies/sentry_drone/states/follow_player.gd" type="Script" id=10]
[ext_resource path="res://actors/enemies/sentry_drone/sentry_drone_physics_manager.gd" type="Script" id=11]
[ext_resource path="res://actors/shared/physics_managers/PhysicsManager.tscn" type="PackedScene" id=12]
[ext_resource path="res://actors/enemies/AggroManager.tscn" type="PackedScene" id=13]
[ext_resource path="res://actors/enemies/sentry_drone/states/unalerted.gd" type="Script" id=14]
[ext_resource path="res://actors/enemies/sentry_drone/states/alerted.gd" type="Script" id=15]
[ext_resource path="res://actors/enemies/shared/react_sprite/ReactSprite.tscn" type="PackedScene" id=16]
[ext_resource path="res://actors/enemies/enemy_state_sequence.gd" type="Script" id=17]
[ext_resource path="res://actors/enemies/sentry_drone/states/die.gd" type="Script" id=18]
[ext_resource path="res://actors/enemies/PushbackManager.tscn" type="PackedScene" id=19]
[ext_resource path="res://actors/enemies/sentry_drone/states/fly_to_point.gd" type="Script" id=20]
[ext_resource path="res://shared/managers/enemy_sound_manager/EnemySoundManager.tscn" type="PackedScene" id=21]
[ext_resource path="res://actors/enemies/sentry_drone/states/pause.gd" type="Script" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="Animation" id=2]
resource_name = "die"

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="SentryDrone" type="KinematicBody2D" groups=[
"lamp_reset",
]]
collision_layer = 2
collision_mask = 516
script = ExtResource( 4 )

[node name="Health" parent="." instance=ExtResource( 1 )]
MAX_HEALTH = 4

[node name="FlashManager" parent="." instance=ExtResource( 2 )]
sprite_path = NodePath("../Sprite")
total_duration = 0.3

[node name="PhysicsManager" parent="." instance=ExtResource( 12 )]
script = ExtResource( 11 )
movement_speed_tiles_per_second = 3.0

[node name="AggroManager" parent="." instance=ExtResource( 13 )]
aggro_radius_tiles = 4.0
unaggro_radius_tiles = 16.0

[node name="PushbackManager" parent="." instance=ExtResource( 19 )]
pushback_distance_tiles = 0.5
pushback_duration = 0.1

[node name="EnemySoundManager" parent="." instance=ExtResource( 21 )]

[node name="SentryDroneBashTelegraph" parent="EnemySoundManager/AudioStreamPlayersVisibility" index="5"]
attenuation_visibility_radius_tiles = 3.0

[node name="SentryDroneBash" parent="EnemySoundManager/AudioStreamPlayersVisibility" index="6"]
attenuation_visibility_radius_tiles = 3.0

[node name="SentryDroneBashImpact" parent="EnemySoundManager/AudioStreamPlayersVisibility" index="7"]
attenuation_visibility_radius_tiles = 3.0

[node name="SentryDroneBashMissed" parent="EnemySoundManager/AudioStreamPlayersVisibility" index="8"]
attenuation_visibility_radius_tiles = 3.0

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="TurnAroundDurationTimer" type="Timer" parent="States/Idle"]

[node name="Alerted" type="Node" parent="States"]
script = ExtResource( 15 )

[node name="AlertedDurationTimer" type="Timer" parent="States/Alerted"]

[node name="Unalerted" type="Node" parent="States"]
script = ExtResource( 14 )

[node name="UnalertedDurationTimer" type="Timer" parent="States/Unalerted"]

[node name="TurnAroundDurationTimer" type="Timer" parent="States/Unalerted"]

[node name="FollowPlayer" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="BashTimer" type="Timer" parent="States/FollowPlayer"]

[node name="FlyToPoint" type="Node" parent="States"]
script = ExtResource( 20 )

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 17 )

[node name="BashTelegraphShake" type="Node" parent="States/Attack"]
script = ExtResource( 6 )

[node name="ShakeTimer" type="Timer" parent="States/Attack/BashTelegraphShake"]

[node name="BashTelegraphPause" type="Node" parent="States/Attack"]
script = ExtResource( 7 )

[node name="PauseTimer" type="Timer" parent="States/Attack/BashTelegraphPause"]

[node name="Bash" type="Node" parent="States/Attack"]
script = ExtResource( 8 )

[node name="BashRecover" type="Node" parent="States/Attack"]
script = ExtResource( 9 )

[node name="RecoverTimer" type="Timer" parent="States/Attack/BashRecover"]

[node name="ShakeTimer" type="Timer" parent="States/Attack/BashRecover"]

[node name="Pause" type="Node" parent="States"]
script = ExtResource( 22 )

[node name="Die" type="Node" parent="States"]
script = ExtResource( 18 )

[node name="ReactSprite" parent="." instance=ExtResource( 16 )]
position = Vector2( 0, -20 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 272

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[editable path="EnemySoundManager"]
[editable path="EnemySoundManager/AudioStreamPlayersVisibility/ExpandOrganic"]
[editable path="EnemySoundManager/AudioStreamPlayersVisibility/ContractOrganic"]
[editable path="EnemySoundManager/AudioStreamPlayersVisibility/JumpOrganic"]
[editable path="EnemySoundManager/AudioStreamPlayersVisibility/LandSoftOrganic"]
[editable path="EnemySoundManager/AudioStreamPlayersVisibility/TurretScanning"]
[editable path="EnemySoundManager/AudioStreamPlayersVisibility/SentryDroneBashTelegraph"]
[editable path="EnemySoundManager/AudioStreamPlayersVisibility/SentryDroneBash"]
[editable path="EnemySoundManager/AudioStreamPlayersVisibility/SentryDroneBashImpact"]
[editable path="EnemySoundManager/AudioStreamPlayersVisibility/SentryDroneBashMissed"]
